--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -3,11 +3,13 @@
     align-items: center;
     justify-content: space-around;
     width: 100vw;
+    height: 90px;
     
     
     position: fixed ;
     top: 0px;
-    
+    background-color: #0D0D0D;
+    /* backdrop-filter: blur(10px) */
 }
 
 .nav-list{
@@ -17,6 +19,7 @@
     justify-content: space-around;
     padding: 30px 30px;
     width: 400px;
+    gap: 30px ;
 
 
 }
@@ -24,5 +27,6 @@
 .nav-list a{
     text-decoration: none;
     font-size: 24px;
+    color: white;
 
 }
