--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,12 @@
 
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  height: 4000px;
+  background-image: url("../public/background.jpg"); /* path to your image */
+  background-repeat: no-repeat;           /* no tiling */
+  background-position: top center;        /* start at top */
+  background-attachment: scroll;          /* move with page */
+}
