--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: space-around;
     padding: 30px 30px;
-    width: 400px;
+    width: auto;
     gap: 30px ;
 
 
