--- a/frontend/src/components/Body.css
+++ b/frontend/src/components/Body.css
@@ -78,4 +78,22 @@
 
 #skill-table-heading{
     text-decoration: underline;
+    text-align: center;
+}
+/* ------------------------------------------------------------------------------------------ */
+.skills-icon-Area{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+.skills-icon-sub-Area{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.s-icon{
+    width: 50px;
+    height: 50px;
 }
